feat: 모임 삭제 API